# fastapi-learning

./: .pre-commit-config.yaml  pyproject.toml
