[tool.poetry]
name = "fastapi-learning"
version = "0.1.0"
description = ""
authors = ["t-yagit <62111840+t-yagit@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
