[tool.poetry]
name = "fastapi-learning"
version = "0.1.0"
description = ""
authors = ["t-yagit <62111840+t-yagit@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pre-commit = "^3.7.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 128

[tool.isort]
include_trailing_comma = true
line_length = 128
multi_line_output = 3